--- a/TTogilgi/app/src/main/AndroidManifest.xml
+++ b/TTogilgi/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.RegisterActivity"></activity>
+        <activity android:name=".activity.SignUpActivity"></activity>
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.DetailActivity" />
         <activity android:name=".activity.EditActivity" />
