--- a/TTogilgi/build.gradle
+++ b/TTogilgi/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext {
+        navigationVersion = '2.2.0-alpha03'
+    }
     repositories {
         google()
         jcenter()
@@ -10,7 +13,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath "io.realm:realm-gradle-plugin:6.0.2"
 
         // NOTE: Do not place your application dependencies here; they belong
