--- a/TTogilgi/app/src/main/AndroidManifest.xml
+++ b/TTogilgi/app/src/main/AndroidManifest.xml
@@ -20,12 +20,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SignUpActivity"></activity>
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.DetailActivity" />
-        <activity android:name=".activity.EditActivity" />
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.IntroActivity">
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".diary.diaryDetail.DetailActivity" />
+        <activity android:name=".diary.diaryDetail.EditActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
