--- a/TTogilgi/app/build.gradle
+++ b/TTogilgi/app/build.gradle
@@ -55,7 +55,10 @@ dependencies {
 
     def retrofit_version = "2.8.1"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+
 
     implementation "com.squareup.okhttp3:logging-interceptor:4.6.0"
 
