--- a/TTogilgi/app/src/main/AndroidManifest.xml
+++ b/TTogilgi/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.PasswordChangeActivity"></activity>
+        <activity android:name=".login.UsernameChangeActivity"></activity>
+        <activity android:name=".login.PasswordChangeActivity" />
         <activity android:name=".login.SignUpActivity" />
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".diary.diaryDetail.DetailActivity" />
