--- a/TTogilgi/app/src/main/AndroidManifest.xml
+++ b/TTogilgi/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:usesCleartextTraffic="true"
+
         android:name=".TTogilgiApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
