1. 튜토리얼 화면 추가 -> ViewPager2 & dotsindicator 2. ﻿앱 제거 시 SharedPreferences의 데이터가 남아 있는 현상 제거 -> ﻿AndroidManifest.xml 파일에 tools:replace="android:allowBackup", android:allowBackup="false" 추가 3. 일기 상세 화면, 수정/작성 화면에 날짜, 요일 텍스트 추가 4. 로그아웃시 튜토리얼 화면으로 넘어가는 오류 해결 -> 로그아웃시 editor의 모든 정보를 초기화 한 후 runFirst만 false로 다시 저장

--- a/TTogilgi/app/build.gradle
+++ b/TTogilgi/app/build.gradle
@@ -66,4 +66,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 }
