--- a/TTogilgi/app/src/main/AndroidManifest.xml
+++ b/TTogilgi/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ttogilgi">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,7 +15,8 @@
 
     <application
         android:name=".TTogilgiApplication"
-        android:allowBackup="true"
+        tools:replace="android:allowBackup"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_the_weather_of_mind_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_the_weather_of_mind_launcher"
@@ -29,6 +31,7 @@
         <activity android:name=".diary.diaryDetail.DetailActivity" />
         <activity android:name=".diary.diaryDetail.EditActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".tutorial.TutorialActivity" />
         <activity android:name=".IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
